# py-game

./: .gitignore  BUILD.md  MULTI_PROJECT_SOLUTION_GUIDE.md  OBSOLETE_FILES_CLEANUP.md  PRIMITIVE_ENCAPSULATION_ANALYSIS.md  README.md  REORGANIZATION_SUMMARY.md  SYSTEM_TEST_SUITE_DOCUMENTATION.md  app.py  build.ps1  coverage-integration.xml  coverage-system.xml  coverage-unit.xml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
src/game_framework/: __init__.py
src/game_framework/base_models/: __init__.py  base_game_state.py  base_move.py  base_player.py
src/tic_tac_toe/: __init__.py  app.py
src/tic_tac_toe/controllers/: game_controller.py
src/tic_tac_toe/models/: __init__.py  board_validator.py  game_board.py  game_state.py  game_status.py  move.py  player.py  value_objects.py  win_checker.py
src/tic_tac_toe/services/: __init__.py  game_analytics_service.py  game_service_core.py  move_executor.py  status_message_generator.py
src/tic_tac_toe/ui/: input_handler.py  renderer.py
tests/: conftest.py
tests/integration/: test_game_flow.py
tests/system/: test_complete_game_scenarios.py  test_performance_and_edge_cases.py  test_ui_interaction_patterns.py
tests/unit/tic_tac_toe/models/: test_move.py  test_player.py  test_value_objects.py
tests/unit/tic_tac_toe/services/: test_game_service.py  test_game_service_fixed.py
ui/: input_handler.py  renderer.py
